custom: support group badge callback

--- a/src/unfold/templates/unfold/helpers/app_list.html
+++ b/src/unfold/templates/unfold/helpers/app_list.html
@@ -15,6 +15,12 @@
                         <h2 class="font-semibold flex flex-row group items-center mb-1 mx-3 py-1.5 px-3 select-none text-font-important-light text-sm dark:text-font-important-dark {% if group.collapsible %}cursor-pointer hover:text-primary-600 dark:hover:text-primary-500{% endif %}" {% if group.collapsible %}x-on:click="navigationOpen = !navigationOpen"{% endif %}>
                             {{ group.title }}
 
+                            {% if group.badge %}
+                                <span class="bg-red-600 font-semibold ml-2 px-1 relative rounded-xs text-xs text-white">
+                                {{ group.badge_callback }}
+                                </span>
+                            {% endif %}
+
                             {% if group.collapsible %}
                                 <span class="material-symbols-outlined ml-auto transition-all group-hover:text-primary-600 dark:group-hover:text-primary-500" x-bind:class="{'rotate-90': navigationOpen}">
                                     chevron_right
