--- a/src/unfold/templates/admin/change_list.html
+++ b/src/unfold/templates/admin/change_list.html
@@ -18,6 +18,9 @@
 {% block extrahead %}
     {{ block.super }}
     {{ media.js }}
+    {% if custom_filter_script %}
+        {{ custom_filter_script|safe }}
+    {% endif %}
 {% endblock %}
 
 {% block bodyclass %}{{ block.super }} app-{{ opts.app_label }} model-{{ opts.model_name }} change-list{% endblock %}
@@ -81,6 +84,16 @@
                             {% block search %}
                                 {% search_form cl %}
                             {% endblock %}
+
+                            {% if custom_select_filters %}
+                                <div class="flex gap-2">
+                                    <select id="custom-filter-select" class="border border-base-200 bg-white font-medium min-w-20 placeholder-base-400 rounded-default shadow-xs text-font-default-light text-sm focus:outline-2 focus:-outline-offset-2 focus:outline-primary-600 group-[.errors]:border-red-600 focus:group-[.errors]:outline-red-600 dark:bg-base-900 dark:border-base-700 dark:text-font-default-dark dark:group-[.errors]:border-red-500 dark:focus:group-[.errors]:outline-red-500 dark:scheme-dark group-[.primary]:border-transparent px-3 py-2 w-full pr-8! max-w-2xl appearance-none truncate">
+                                        {% for filter in custom_select_filters %}
+                                            <option id="{{ filter.id }}" data-url="{{ filter.value }}">{{ filter.label }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            {% endif %}
 
                             {% block filters %}
                                 {% if cl.has_filters %}
